--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#6022DB</color>
+    <color name="button_color">#7BB9CD</color>
+    <color name="grey">#999999</color>
 </resources>
