--- a/app/src/main/res/layout/fragment_pastry.xml
+++ b/app/src/main/res/layout/fragment_pastry.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/background_color"
-    tools:context=".PastryFragment">
+    tools:context=".ui.pastry.PastryFragment">
 
     <ImageView
         android:id="@+id/btn_arrow"
