--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,57 +7,57 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.london.inai.SplashFragment"
+        android:name="com.london.inai.ui.splash.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" />
     <fragment
         android:id="@+id/authorizationFragment"
-        android:name="com.london.inai.AuthorizationFragment"
+        android:name="com.london.inai.ui.authorization.AuthorizationFragment"
         android:label="fragment_authorization"
         tools:layout="@layout/fragment_authorization" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.london.inai.AccountFragment"
+        android:name="com.london.inai.ui.Account.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
         android:id="@+id/onBoardingFragment"
-        android:name="com.london.inai.OnBoardingFragment"
+        android:name="com.london.inai.ui.onboarding.OnBoardingFragment"
         android:label="fragment_on_boarding"
         tools:layout="@layout/fragment_on_boarding" />
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.london.inai.MainFragment"
+        android:name="com.london.inai.ui.main.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
     <fragment
         android:id="@+id/employeeFragment"
-        android:name="com.london.inai.EmployeeFragment"
+        android:name="com.london.inai.ui.employee.EmployeeFragment"
         android:label="fragment_employee"
         tools:layout="@layout/fragment_employee" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.london.inai.ProfileFragment"
+        android:name="com.london.inai.ui.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/pastryFragment"
-        android:name="com.london.inai.PastryFragment"
+        android:name="com.london.inai.ui.pastry.PastryFragment"
         android:label="fragment_pastry"
         tools:layout="@layout/fragment_pastry" />
     <fragment
         android:id="@+id/compositionFragment"
-        android:name="com.london.inai.CompositionFragment"
+        android:name="com.london.inai.ui.composition.CompositionFragment"
         android:label="fragment_composition"
         tools:layout="@layout/fragment_composition" />
     <fragment
         android:id="@+id/productStockFragment"
-        android:name="com.london.inai.ProductStockFragment"
+        android:name="com.london.inai.ui.product.ProductStockFragment"
         android:label="fragment_product_stock"
         tools:layout="@layout/fragment_product_stock" />
     <fragment
         android:id="@+id/aboutUsFragment"
-        android:name="com.london.inai.AboutUsFragment"
+        android:name="com.london.inai.ui.about.AboutUsFragment"
         android:label="fragment_about_us"
         tools:layout="@layout/fragment_about_us" />
 
