--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:gravity="center"
-    tools:context=".AccountFragment">
+    tools:context=".ui.Account.AccountFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
