--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:orientation="vertical"
-    tools:context=".AuthorizationFragment">
+    tools:context=".ui.authorization.AuthorizationFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
