--- a/app/src/main/res/layout/fragment_employee.xml
+++ b/app/src/main/res/layout/fragment_employee.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:orientation="vertical"
-    tools:context=".EmployeeFragment">
+    tools:context=".ui.employee.EmployeeFragment">
 
     <ImageView
         android:id="@+id/btn_arrow"
