--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:orientation="vertical"
-    tools:context=".MainFragment">
+    tools:context=".ui.main.MainFragment">
 
     <ImageView
         android:id="@+id/iv_salesman"
