--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_color"
-    tools:context=".OnBoardingFragment">
+    tools:context=".ui.onboarding.OnBoardingFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
