--- a/app/src/main/res/layout/fragment_product_stock.xml
+++ b/app/src/main/res/layout/fragment_product_stock.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:orientation="vertical"
-    tools:context=".ProductStockFragment">
+    tools:context=".ui.product.ProductStockFragment">
 
     <ImageView
         android:id="@+id/btn_arrow"
