--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:gravity="center"
-    tools:context=".SplashFragment">
+    tools:context=".ui.splash.SplashFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
